# tamizhi-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.rst
cmake/buildFiles/: ConfigPath.h.in  VersionData.h.in
cmake/modules/: FindGperftools.cmake  FindLibunwind.cmake  Handle3rdParty.cmake  HandleCompilationFlags.cmake  HandleOptions.cmake  HandleSubmodules.cmake  LintingAndChecks.cmake  PathData.cmake  ProjectUtils.cmake  VersionData.cmake
tamizhi/: CMakeLists.txt
tamizhi/core/: CMakeLists.txt
tamizhi/core/base/: BackwardWrapper.h  Core.h  ExtendedSingleton.h  Lambda.h  Macros.h  Memory.h  PrintUtils.h  Profiler.cpp  Profiler.h  RawPointer.h  Singleton.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  Time.h  UTF8Utils.cpp  UTF8Utils.h  Utils.cpp  Utils.h
tamizhi/core/examples/FileExample/: CMakeLists.txt  FileExample.cpp
tamizhi/core/examples/UTFExample/: CMakeLists.txt  UTFExample.cpp
tamizhi/core/file/: FileOptions.h  FilePath.cpp  FilePath.h  FileUtils.cpp  FileUtils.h
tamizhi/core/xml/: tinyxml2.cpp  tinyxml2.h
tamizhi/network/: CMakeLists.txt
tamizhi/network/examples/: CMakeLists.txt
tamizhi/network/examples/RestServer/: CMakeLists.txt  RestServerExample.cpp
tamizhi/network/rest/: RESTExceptionHandler.h  RESTServer.cpp  RESTServer.h
tamizhi/textConverter/: CMakeLists.txt
tamizhi/textConverter/api/: RESTInterface.cpp  RESTInterface.h
tamizhi/textConverter/converter/: Converter.cpp  Converter.h
tamizhi/textConverter/examples/LoaderExample/: CMakeLists.txt  LoaderExample.cpp
tamizhi/textConverter/examples/TextConverterExample/: CMakeLists.txt  TextConverterExample.cpp
tamizhi/textConverter/mapping/: Mapping.cpp  Mapping.h
tamizhi/textConverter/mapping/manager/: MappingManager.cpp  MappingManager.h
tamizhi/textConverter/mappingLoader/: LoaderBase.cpp  LoaderBase.h  MappingLoader.cpp  MappingLoader.h
tamizhi/textConverter/mappingLoader/types/: CSVLoader.cpp  CSVLoader.h  JSONLoader.cpp  JSONLoader.h  XMLLoader.cpp  XMLLoader.h
tamizhi/textConverter/utils/: ConversionType.h
